objects/dca_cnvrt_note__Convert_Notes_to_ContentNotes_Settings__c.object
<CustomObject>
    <fields>
        <fullName>dca_cnvrt_note__Convert_Private_Notes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deprecated since version 1.3. Do not use.</description>
        <inlineHelpText>Deprecated since version 1.3. Do not use.</inlineHelpText>
        <label>Convert Private Notes? (deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dca_cnvrt_note__Convert_in_Near_Real_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables 'after insert' trigger on Note that enqueues job to convert into ContentNotes in near real-time. This async conversion does not slow down save transaction, and if 'Delete Notes' option is enabled then deletes in separate transaction too.</description>
        <inlineHelpText>Enables 'after insert' trigger on Note that enqueues job to convert into ContentNotes in near real-time. This async conversion does not slow down save transaction, and if 'Delete Notes' option is enabled then deletes in separate transaction too.</inlineHelpText>
        <label>Convert in Near Real Time?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dca_cnvrt_note__Delete_Note_Once_Converted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked then conversion process will delete the original Note once successfully converted to ContentNote. You may want to delete them to save storage space in your org.</description>
        <inlineHelpText>When checked then conversion process will delete the original Note once successfully converted to ContentNote. You may want to delete them to save storage space in your org.</inlineHelpText>
        <label>Delete Note Once Converted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dca_cnvrt_note__Share_Private_Notes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deprecated since version 1.3. Do not use.</description>
        <inlineHelpText>Deprecated since version 1.3. Do not use.</inlineHelpText>
        <label>Share Private Notes? (deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dca_cnvrt_note__Share_Type__c</fullName>
        <defaultValue>"V"</defaultValue>
        <description>Deprecated since version 1.2. Do not use.</description>
        <inlineHelpText>Deprecated since version 1.2. Do not use.</inlineHelpText>
        <label>Share Type (deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dca_cnvrt_note__Visibility__c</fullName>
        <defaultValue>"InternalUsers"</defaultValue>
        <description>Deprecated since version 1.2. Do not use.</description>
        <inlineHelpText>Deprecated since version 1.2. Do not use.</inlineHelpText>
        <label>Visibility (deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Controls when and how certain notes are converted to enhanced notes.</description>
    <label>Convert Notes to ContentNotes Settings</label>
</CustomObject>